objects/Screening_Interview__c.object
<CustomObject>
    <fields>
        <fullName>Availability_Note__c</fullName>
        <label>Availability Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Deal_Size__c</fullName>
        <label>Average Deal Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>0-5k</fullName>
                </value>
                <value>
                    <fullName>5-10k</fullName>
                </value>
                <value>
                    <fullName>10k-25k</fullName>
                </value>
                <value>
                    <fullName>25k-50k</fullName>
                </value>
                <value>
                    <fullName>50k-100k</fullName>
                </value>
                <value>
                    <fullName>100k-1 Million</fullName>
                </value>
                <value>
                    <fullName>1 Million+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_activities_per_day__c</fullName>
        <label>Average activities per day</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <inlineHelpText>HTML Formatting: 
&lt;ul&gt;&lt;li&gt; 
&lt;li&gt; 
&lt;li&gt; 
&lt;li&gt; 

&lt;/ul&gt;&lt;/li&gt;</inlineHelpText>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CT_PPW_Incomplete__c</fullName>
        <formula>Candidate__r.CT_PPW_Incomplete__c</formula>
        <label>CT PPW Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_First_Name__c</fullName>
        <formula>Candidate__r.FirstName</formula>
        <label>Candidate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Last_Activity_Date__c</fullName>
        <formula>Candidate__r.LastActivityDate</formula>
        <label>Candidate Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate_Phone__c</fullName>
        <label>Candidate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Candidate_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Registration</label>
        <referenceTo>Candidate_Registration__c</referenceTo>
        <relationshipLabel>Screening Interviews</relationshipLabel>
        <relationshipName>Screening_Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Interviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Categories_All__c</fullName>
        <formula>IF(ISPICKVAL( Category_1__c ,&quot;SaaS&quot;), &quot;SaaS,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;SaaS&quot;), &quot;SaaS,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;SaaS&quot;), &quot;SaaS,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Digital Media&quot;), &quot;Digital Media,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Digital Media&quot;), &quot;Digital Media,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Digital Media&quot;), &quot;Digital Media,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Technology&quot;), &quot;Technology,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Technology&quot;), &quot;Technology,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Technology&quot;), &quot;Technology,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;General Sales&quot;), &quot;General Sales,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;General Sales&quot;), &quot;General Sales,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;General Sales&quot;), &quot;General Sales,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Administrative&quot;), &quot;Administrative,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Administrative&quot;), &quot;Administrative,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Administrative&quot;), &quot;Administrative,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Human Resources&quot;), &quot;Human Resources,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Human Resources&quot;), &quot;Human Resources,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Human Resources&quot;), &quot;Human Resources,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Marketing/PR&quot;), &quot;Marketing/PR,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Marketing/PR&quot;), &quot;Marketing/PR,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Marketing/PR&quot;), &quot;Marketing/PR,&quot;, &quot;&quot;) + 


IF(ISPICKVAL( Category_1__c ,&quot;Accounting/Finance&quot;), &quot;Accounting/Finance,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Accounting/Finance&quot;), &quot;Accounting/Finance,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Accounting/Finance&quot;), &quot;Accounting/Finance,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Events&quot;), &quot;Events,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Events&quot;), &quot;Events,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Events&quot;), &quot;Events,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Operations&quot;), &quot;Operations,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Operations&quot;), &quot;Operations,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Operations&quot;), &quot;Operations,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;IT&quot;), &quot;IT,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;IT&quot;), &quot;IT,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;IT&quot;), &quot;IT,&quot;, &quot;&quot;) + 

IF(ISPICKVAL( Category_1__c ,&quot;Sales&quot;), &quot;Sales,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_2__c ,&quot;Sales&quot;), &quot;Sales,&quot;, &quot;&quot;) + 
IF(ISPICKVAL( Category_3__c ,&quot;Sales&quot;), &quot;Sales,&quot;, &quot;&quot;)</formula>
        <label>Categories - All</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00-02yrs Sales</fullName>
                </value>
                <value>
                    <fullName>02-05yrs. Digital Media Sales</fullName>
                </value>
                <value>
                    <fullName>02-05yrs. General Sales</fullName>
                </value>
                <value>
                    <fullName>02-05yrs. Marketing Sales</fullName>
                </value>
                <value>
                    <fullName>02-05yrs. Online Biz Dev Sales</fullName>
                </value>
                <value>
                    <fullName>02-05yrs. SaaS Sales</fullName>
                </value>
                <value>
                    <fullName>02-05yrs. Technology Sales</fullName>
                </value>
                <value>
                    <fullName>05-10yrs. Digital Media Sales</fullName>
                </value>
                <value>
                    <fullName>05-10yrs. General Sales</fullName>
                </value>
                <value>
                    <fullName>05-10yrs. Marketing Sales</fullName>
                </value>
                <value>
                    <fullName>05-10yrs. Online Biz Dev Sales</fullName>
                </value>
                <value>
                    <fullName>05-10yrs. SaaS Sales</fullName>
                </value>
                <value>
                    <fullName>05-10yrs Technology Sales</fullName>
                </value>
                <value>
                    <fullName>10+yrs. Digital Media Sales</fullName>
                </value>
                <value>
                    <fullName>10+yrs. General Sales</fullName>
                </value>
                <value>
                    <fullName>10+yrs. Marketing Sales</fullName>
                </value>
                <value>
                    <fullName>10+yrs. Online Biz Dev Sales</fullName>
                </value>
                <value>
                    <fullName>10+yrs. SaaS Sales</fullName>
                </value>
                <value>
                    <fullName>10+Yrs. Technology Sales</fullName>
                </value>
                <value>
                    <fullName>A/P</fullName>
                </value>
                <value>
                    <fullName>A/R</fullName>
                </value>
                <value>
                    <fullName>Account Coordinator</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>C-Level Support</fullName>
                </value>
                <value>
                    <fullName>Copywriter</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_1__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>General Sales</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR</fullName>
                </value>
                <value>
                    <fullName>Accounting/Finance</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>General Sales</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR</fullName>
                </value>
                <value>
                    <fullName>Accounting/Finance</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_3__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>General Sales</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR</fullName>
                </value>
                <value>
                    <fullName>Accounting/Finance</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <inlineHelpText>Rate the candidate&apos;s communication skills, including personality and how easy it is to talk to them.</inlineHelpText>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_structure__c</fullName>
        <label>Comp structure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Companies_Interviewing_With__c</fullName>
        <label>Companies Interviewing With?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compensation_Note__c</fullName>
        <label>Compensation Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Bonus__c</fullName>
        <label>Current Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Hourly__c</fullName>
        <label>Current Hourly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_OTE__c</fullName>
        <label>Current OTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Salary__c</fullName>
        <label>Current Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Base__c</fullName>
        <label>Customer Base</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Hourly__c</fullName>
        <label>Desired Hourly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_OTE__c</fullName>
        <label>Desired OTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Salary__c</fullName>
        <label>Desired Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Note__c</fullName>
        <formula>Candidate__r.Education_Note__c</formula>
        <label>Education Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Candidate__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <formula>TEXT(Candidate__r.Employment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <inlineHelpText>Rate the quality, depth, and stability of the candidate&apos;s work experience.</inlineHelpText>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goals_Career_Path__c</fullName>
        <label>Goals/Career Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Transportation__c</fullName>
        <formula>TEXT(Candidate__r.Has_Transportation__c)</formula>
        <label>Has Transportation?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Education_Completed__c</fullName>
        <formula>TEXT(Candidate__r.Highest_Education_Completed__c)</formula>
        <inlineHelpText>Must be edited on candidate record</inlineHelpText>
        <label>Highest Education Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Support_Level__c</fullName>
        <label>Highest Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-level</fullName>
                </value>
                <value>
                    <fullName>Director Level</fullName>
                </value>
                <value>
                    <fullName>Below Director</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Histrorical_Rating__c</fullName>
        <label>Hysterical Rating</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_held_accountable__c</fullName>
        <label>How held accountable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Companies_Industries__c</fullName>
        <label>Ideal Companies/Industries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Positions__c</fullName>
        <label>Ideal Positions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Paperwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incomplete Paperwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industries_of_Exposure__c</fullName>
        <label>Industries of Exposure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Banking &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Corporate Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Venture Capital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Artificial Intelligence</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Cloud Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Corporate Retail</fullName>
                </value>
                <value>
                    <fullName>Data: Integration / Security / Storage</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>edTech / e-learning</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Event Management</fullName>
                </value>
                <value>
                    <fullName>Executive Search</fullName>
                </value>
                <value>
                    <fullName>FinTech</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this candidate is interested in working internally.</inlineHelpText>
        <label>Internal Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interview_Availability__c</fullName>
        <label>Interview Availability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Location__c</fullName>
        <label>Interview Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Type__c</fullName>
        <label>Interview Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title_s__c</fullName>
        <label>Job Title(s)</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type2__c</fullName>
        <formula>IF(INCLUDES( Candidate__r.ts2__Job_Type__c , &quot;Temporary/ Contract&quot;), &quot;CT; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.ts2__Job_Type__c , &quot;Contract to Hire&quot;), &quot;T-P; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.ts2__Job_Type__c , &quot;Direct Hire&quot;), &quot;DH; &quot;, NULL)</formula>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary/ Contract</fullName>
                </value>
                <value>
                    <fullName>Contract to Hire</fullName>
                </value>
                <value>
                    <fullName>Direct Hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Hard_Skills__c</fullName>
        <label>Key Hard Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Admin Recruiting</fullName>
                </value>
                <value>
                    <fullName>AP/AR</fullName>
                </value>
                <value>
                    <fullName>Bilingual Customer Service</fullName>
                </value>
                <value>
                    <fullName>Board Support</fullName>
                </value>
                <value>
                    <fullName>Calendaring</fullName>
                </value>
                <value>
                    <fullName>C-level Support</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Expense Reporting</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Acct Recruiting</fullName>
                </value>
                <value>
                    <fullName>HRIS</fullName>
                </value>
                <value>
                    <fullName>HR Management</fullName>
                </value>
                <value>
                    <fullName>Individual Support</fullName>
                </value>
                <value>
                    <fullName>Office Move/Build Outs</fullName>
                </value>
                <value>
                    <fullName>People Management</fullName>
                </value>
                <value>
                    <fullName>Process Payroll</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Sales Recruiting</fullName>
                </value>
                <value>
                    <fullName>Series 7/63/65/66 certifications</fullName>
                </value>
                <value>
                    <fullName>Sourcing</fullName>
                </value>
                <value>
                    <fullName>Special events</fullName>
                </value>
                <value>
                    <fullName>Team Support</fullName>
                </value>
                <value>
                    <fullName>Tech Recruiting</fullName>
                </value>
                <value>
                    <fullName>Travel - Domestic</fullName>
                </value>
                <value>
                    <fullName>Travel - International</fullName>
                </value>
                <value>
                    <fullName>Vendor Coordination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Comments__c</fullName>
        <label>Language Comments</label>
        <type>TextArea</type>
    </fields>
</CustomObject>